--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,62 +1,14 @@
-img{
-    height: 80px;
-    width: 80px;
-    border-radius: 50%;
-    display: block;
-    margin: auto;
-}
-.card{
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    display: inline-block;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    width: 255px;
-    padding: 10px;
-    border-radius: 20px;
-    color: rgba(0, 0, 0, 0.4);
-    &:hover{
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    }
-}
 main{
     margin: auto;
     padding: 50px;
     max-width: 1220px;
     position: relative;
     left: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-p{
-    margin-bottom: 2px;
-    font-size: 14px;
-}
-.name{
-    color: rgba(0, 0, 0, 0.8);
-    font-size: 16px;
-}
-.more{
-    border: none;
-    background: transparent;
-    font-size: 14px;
-    cursor: pointer;
-}
-
 @media (max-width: 750px) {
-    .card{
-        display: block;
-        margin: auto;
-        margin-bottom: 30px;
-        width: 330px;
-    }
-    p{
-        margin-bottom: 5px;
-    }
-    .name{
-        margin-top: 30px;
-    }
-    img{
-        height: 100px;
-        width: 100px;
-    }
     main{
         position: static;
     }
