--- a/src/styles/StudentCard.css
+++ b/src/styles/StudentCard.css
@@ -80,8 +80,12 @@
 .stats{
     margin-top: 5px;
     display: flex;
+    justify-content: center;
     color: rgba(0, 0, 0, 0.8);
-    gap: 5px;
+    gap: 15px;
+}
+.stats section{
+    width: 30%;
 }
 .stats section h2{
     font-size: 16px;
@@ -92,4 +96,11 @@
 .stats section p{
     font-size: 13px;
     margin-bottom: 3px;
+    display: flex;
+    justify-content: space-between;
+}
+.too-big{
+    font-size: 10px;
+    display: flex;
+    align-items: center;
 }
